--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
           s.parentNode.insertBefore(hm, s);
         })();
         </script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147524678-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-147524678-2');
+    </script>
         
 </head>
 
